redoing the server side, more blank client side

--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
-  "name": "server",
+  "name": "bitcamp2022",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TheGiraffe/Bitcamp2022.git"
+  },
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TheGiraffe/Bitcamp2022/issues"
+  },
+  "homepage": "https://github.com/TheGiraffe/Bitcamp2022#readme",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
