--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jade": "~1.11.0",
     "mongodb": "^4.5.0",
     "mongoose": "^6.2.10",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "start": "^5.1.0"
   }
 }
