--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "~4.16.1",
+    "express-handlebars": "^6.0.4",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "mongodb": "^4.5.0",
